k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: irondome
  labels:
    app.kubernetes.io/part-of: irondome
